[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clinical-triage-env"
version = "2.0.0"
description = "ClinicalTriage OpenEnv — Emergency Room Triage Simulation for RL Agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "VisionVerse", email = "tanushreekalla09@gmail.com" }
]
keywords = ["openenv", "reinforcement-learning", "triage", "healthcare", "simulation"]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.1",
  "openai>=1.30.0",
  "aiofiles>=23.2.1",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
